style:  burger animation, fix overflow, add shadow

--- a/src/assets/stylesheets/base/_base.scss
+++ b/src/assets/stylesheets/base/_base.scss
@@ -35,3 +35,7 @@ body {
   display: flex;
   list-style: none;
 }
+
+.lock{
+  overflow: hidden;
+}
