--- a/src/assets/stylesheets/layouts/_header.scss
+++ b/src/assets/stylesheets/layouts/_header.scss
@@ -1,12 +1,20 @@
 .header {
   position: fixed;
   height: 61px;
+  min-height: 61px;
+  max-height: 100vh;
+  
   width: 100%;
   top: 0;
   left: 0;
   z-index: 50;
-
-  &::before{
+  -webkit-box-shadow: 0px 6px 10px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 6px 10px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 6px 10px -1px rgba(0, 0, 0, 0.75);
+  @include media-mobile {
+    overflow-y: scroll;
+  }
+  &::before {
     content: '';
     position: absolute;
     top: 0;
@@ -25,5 +33,3 @@
     min-height: 50px;
   }
 }
-
-
